[build-system]
requires = ["setuptools>=42", "wheel"]   # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
multi_line_output = 3
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY',  'FIRSTPARTY', 'LOCALFOLDER']

[tool.black]
line-length = 88
target_version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
| dist
| data
)/
'''